--- a/数据库.md
+++ b/数据库.md
@@ -14,19 +14,26 @@ admin
 
 
 
+wx_user_info
 
+| 字段                    | 类型        | 描述     |
+| ----------------------- | ----------- | -------- |
+| id                      | int         |          |
+| open_id                 | varchar(64) | 用户标识 |
+| session_key             | varchar(64) | 会话密匙 |
+| session_key_modify_time | datetime    | 修改时间 |
+| create_region_id        |             |          |
+| manage_region_id        |             |          |
 
-### picker
+### region
 
-| 字段      | 类型         | 描述                 |
-| --------- | ------------ | -------------------- |
-| id        | int          |                      |
-| name      | varchar(128) | 姓名（默认微信名？） |
-| qq        | varchar(16)  | qq                   |
-| telephone | varchar(32)  | 电话                 |
-|           |              |                      |
-
-
+| 字段           | 类型        | 描述      |
+| -------------- | ----------- | --------- |
+| id             | int         |           |
+| name           | varchar(64) | 区域名称  |
+| create_user_id | int         | 创建人id  |
+| manager_id     | int         | 管理员 id |
+|                |             |           |
 
 
 
@@ -37,7 +44,8 @@ admin
 | id              | int          |                                    |
 | name            | varchar(32)  | 丢失物的名称                       |
 | description     | varchar(512) | 丢失物的描述                       |
-| picker_id       | int          | 拾取人                             |
+| region_id       | int          | 区域id                             |
+| picker          | int          | 拾取人                             |
 | pick_time       | datetime     | 拾取时间（精确到天），默认提交时间 |
 | pick_address    | varchar(64)  | 拾取地点                           |
 | image           | varchar(64)  | 图片的url                          |
@@ -46,3 +54,30 @@ admin
 | owner_telephone | varchar(32)  | 失主的电话                         |
 | return_time     | datetime     | 归还时间                           |
 
+通用返回对象
+
+{
+
+"code": 0->成功，-1->失败
+
+"message":
+
+"data":
+
+\- }
+
+通用分页对象
+
+{
+
+pageNum,当前页数
+
+pageSize，当前每页的个数
+
+totalPage，总的页数
+
+total，数据的总数
+
+list，当前页的数据
+
+}
