--- a/数据库.md
+++ b/数据库.md
@@ -81,3 +81,19 @@ total，数据的总数
 list，当前页的数据
 
 }
+
+
+
+| 属性           | 描述                 | 类型                   |
+| -------------- | -------------------- | ---------------------- |
+| imageUrl       | 图片描述url          | string                 |
+| description    | 文字描述             | string                 |
+| label          | 标签                 | string                 |
+| pickTime       | 拾取时间             | string                 |
+| pickAddress    | 拾取地点             | string                 |
+| recoverDetails | 暂存地点或者联系方式 | string                 |
+| recoverMethod  | 提取方式             | 0->暂存地点,1->联系方式 |
+| regionId       | 区域id               | int                    |
+| nickname       | 昵称                 | string                 |
+| iconUrl        | 头像url              | string                 |
+
